--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="title_color">#243665</color>
+<!--    <color name="add">#87CEEB</color>-->
+    <color name="add">#4CCB9E</color>
+
 </resources>
