--- a/app/src/main/res/layout/activity_leave_content.xml
+++ b/app/src/main/res/layout/activity_leave_content.xml
@@ -11,7 +11,10 @@
         android:id="@+id/gawsan"
         android:layout_width="800dp"
         android:layout_height="95dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:background="#BDE2EA">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,11 +23,11 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
+            android:padding="5dp"
             android:text="My Leaves"
             android:textColor="@color/BlueAsh"
             android:textSize="25dp"
             android:textStyle="bold" />
-
 
         <ImageButton
             android:id="@+id/addNewLeave_btn"
@@ -44,6 +47,29 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.022"
             app:srcCompat="@drawable/add_icon" />
+
+        <TextView
+            android:id="@+id/totalLeaveCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="68dp"
+            android:text="" />
+
+        <ImageButton
+            android:id="@+id/back_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="77dp"
+            android:layout_marginBottom="38dp"
+            app:srcCompat="@drawable/ic_back_gray"
+            android:background="@null" />
     </RelativeLayout>
 
     <RelativeLayout
